<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="SafetyPRG" Id="{d93974d1-d903-4b6e-83e0-8aba9599867a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM SafetyPRG
VAR
	fbAirTimer			:TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Safety GroupPort run condition
q_bSafetyRun := TRUE;
q_bSafetyMasterOn := i_bMasterOn AND bBL100p100;

// Safety Error
bSafetyError := i_bSafetyGroupComErr OR i_bSafetyGroupFBErr OR i_bSafetyGroupOtherErr OR 
				i_bLO1EDMErr OR i_bLO2EDMErr;

q_bSafetyErrorAck := bSafetyError AND bBL100p100 OR i_bVisePos1ErrorAckBtn OR i_bVisePos2ErrorAckBtn;				

(*Air pressure error*)
fbAirTimer(IN:= i_bLO1, PT:= T#10S);
IF i_bLO1 THEN
	IF fbAirTimer.Q AND NOT i_bAirPressureOk THEN
		wError.0 := TRUE;
	END_IF
END_IF

IF bAckP THEN
	wError := 0;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>